# cpp_python

./: CMakeLists.txt
MultiCalc/: Calc.py  MultiProc.py  input.txt  output.txt
MultiCalc/Input/: InputAbstract.py  InputFileSimple.py
MultiCalc/Output/: OutputAbstract.py  OutputFileSimple.py
src/: Calc.cpp
